[gd_scene load_steps=2 format=2]

[ext_resource path="res://BrowserWalletClient.gd" type="Script" id=1]

[node name="Panel" type="Panel"]
margin_right = 994.0
margin_bottom = 508.0
script = ExtResource( 1 )

[node name="Connect" type="Button" parent="."]
margin_left = 38.0
margin_top = 37.0
margin_right = 263.0
margin_bottom = 91.0
disabled = true
text = "Connect"

[node name="Dissconect" type="Button" parent="."]
margin_left = 38.0
margin_top = 107.0
margin_right = 263.0
margin_bottom = 161.0
disabled = true
text = "Dissconect"

[node name="SignMessage" type="Button" parent="."]
margin_left = 38.0
margin_top = 177.0
margin_right = 263.0
margin_bottom = 231.0
disabled = true
text = "SignMessage"

[node name="Messages" type="RichTextLabel" parent="."]
margin_left = 285.0
margin_top = 40.0
margin_right = 964.0
margin_bottom = 465.0

[node name="Autoconnect" type="CheckButton" parent="."]
margin_left = 58.0
margin_top = 443.0
margin_right = 219.0
margin_bottom = 483.0
disabled = true
text = "Autoconnect"

[connection signal="pressed" from="Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="Dissconect" to="." method="_on_Dissconect_pressed"]
[connection signal="pressed" from="SignMessage" to="." method="_on_SignMessage_pressed"]
[connection signal="toggled" from="Autoconnect" to="." method="_on_Autoconnect_toggled"]
